Refactored navbar styles to ensure consistent alignment and appearance during scrolling

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -16,12 +16,34 @@
     background-color: rgb(255 255 255 / 47%);
   }
 
-  &__logo h1 {
-    margin: 0;
+  &__logo {
+    a, h1, p {
+      color: #fff;
+    }
+
+    h1, p {
+      margin: 0;
+    }
+
+    p {
+      font-size: 18px;
+    }
+
+    &.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
   }
 
   &__title {
     text-align: center;
+    color: white;
+    font-size: 24px;
+    margin-left: 140px;
+
+    .new-title {
+      color: black;
+    }
   }
 
   &__links {
@@ -30,6 +52,86 @@
     & a {
       margin-left: 20px;
       text-decoration: none;
+      border: 1px solid white;
+      padding: 16px 20px;
+      border-radius: 28px;
+      font-size: 20px;
+      transition: background-color 0.3s, color 0.3s;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .black-links {
+      border: 1px solid black;
+      color: black;
+    }
+
+    &--skills.black-links {
+      &::before {
+        background-color: black;
+      }
+      &::after {
+        color: #fff;
+      }
+      &:hover::after {
+        color: #fff;
+      }
+    }
+
+    &--contact.black-links {
+      background-color: black;
+      color: #fff;
+    }
+
+    &--projects {
+      color: white;
+
+      &:hover {
+        background-color: black;
+        border: 1px solid black;
+      }
+    }
+
+    &--skills {
+      color: white;
+      position: relative;
+
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background-color: white;
+        z-index: -1;
+        transition: height 0.3s ease-in-out;
+      }
+
+      &:hover::before {
+        height: 100%;
+      }
+
+      &::after {
+        content: 'Skills';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scaleY(0);
+        transform-origin: bottom;
+        color: black;
+        transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+      }
+
+      &:hover::after {
+        transform: translate(-50%, -50%) scaleY(1);
+        color: black;
+      }
+    }
+
+    &--contact {
+      background-color: #fff;
+      color: black;
     }
   }
 }
